Microservice/deploy-management-server/k8s-control/src/main/resources/templates/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: 
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
